Fix gallery spacing for smaller screen sizes

--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -78,7 +78,7 @@
     }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 992px) {
     .left-image {
         margin-right: 0px;
     }
@@ -92,12 +92,20 @@
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 991px) {
     .left-image, .right-image {
         margin-bottom: 30px;
     }
 
     .middle-row {
         padding-top: 0px;
+    }
+
+    .middle-row .left-image-col {
+        margin-bottom: -47px;
+    }
+
+    .middle-row .left-image-bottom-col {
+        margin-bottom: -30px;
     }
 }
